# SLAyer

./: .gitignore  README.md  presentation.html  pyproject.toml
.github/workflows/: ci.yml
dataset/ai-bench-v0/: metadata.jsonl
dataset/ai-bench-v0/cases/javascript/: ai_exec.js
dataset/ai-bench-v0/cases/python/: ai_ssrf.py
dataset/ai-bench-v1/: data-pipeline-py.py  rest-api-js.js  results.json  user-auth-service-py.py  webhook-handler-ts.ts
dataset/slayer-bench-v0/: metadata.jsonl
dataset/slayer-bench-v0/blind_spot/javascript/: indirect_sql.js
dataset/slayer-bench-v0/blind_spot/python/: indirect_ssrf.py  secret_via_function.py  split_shell_injection.py
dataset/slayer-bench-v0/false_positive/javascript/: constant_fetch.js  fp_math_random_game.js  fp_proper_catch.js
dataset/slayer-bench-v0/false_positive/python/: fp_safe_random.py  fp_safe_subprocess.py
dataset/slayer-bench-v0/fixed/javascript/: js_network_exec.js  js_sql_debug.js  js_weak_random_except.js
dataset/slayer-bench-v0/fixed/python/: py_secret_exec_sql.py  py_ssrf_debug.py  py_weak_random_except.py
dataset/slayer-bench-v0/fixed/typescript/: ts_random_debug.ts  ts_secrets_network.ts
dataset/slayer-bench-v0/vulnerable/javascript/: js_network_exec.js  (+2 more)
docs/: patch-quality-reference.md  spec.md
slayer/: ai_runner.py  cli.py  models.py  redact.py  reporter.py  rules.py  scanner.py
slayer/analyzers/: __init__.py  js_analyzer.py  py_analyzer.py
slayer/patcher/: __init__.py  llm_patcher.py
tests/: conftest.py  test_ai_runner.py  test_benchmark.py  test_patch.py  test_scan.py
(+5 files in other folders)
